Checkpoint - reenaabled several more test suites